--- a/templates/telemetry.hbs
+++ b/templates/telemetry.hbs
@@ -105,5 +105,11 @@
     // Atualiza os gráficos a cada 1 segundo
     setInterval(updateCharts, 1000);
   </script>
+  <div style="text-align: center; margin-top: 20px;">
+    <button onclick="window.location.href='/escolher_variaveis'"
+            style="padding: 10px 20px; font-size: 16px; cursor: pointer;">
+        Gráficos Personalizados
+    </button>
+  </div>
 </body>
 </html>
